@@ -291,6 +291,7 @@ tasks {
     }
 
     getByName("buildSearchableOptions") {
+      jvmArgs("-Djava.security.manager=com.intellij.platform.core.nio.fs.CoreBootstrapSecurityManager")
       enabled = buildConfiguration == "Release"
     }
   }
